küçük düzenlemeler
