# docs/swagger.json
@@ -18,35 +18,6 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/myshop/products": {
-            "get": {
-                "description": "Get the details of all products for the logged-in user's shop",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Get products by the logged-in user's shop",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Product"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Shop or products not found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/orders/{order_id}/status": {
             "put": {
                 "description": "Updates the status of an order by its ID",
@@ -175,7 +146,7 @@
                 }
             }
         },
-        "/products": {
+        "/product": {
             "get": {
                 "description": "Get the details of all products",
                 "produces": [
@@ -254,7 +225,36 @@
                 }
             }
         },
-        "/products/{product_id}": {
+        "/product/my-products": {
+            "get": {
+                "description": "Get the details of all products for the logged-in user's shop",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Get products by the logged-in user's shop",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Product"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Shop or products not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/product/{product_id}": {
             "get": {
                 "description": "Get the details of a product by its ID",
                 "produces": [
@@ -352,7 +352,51 @@
                 }
             }
         },
-        "/shops": {
+        "/product/{shop_id}/products": {
+            "get": {
+                "description": "Get the details of all products for a specific shop",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Get products by shop ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Shop ID",
+                        "name": "shop_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Product"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid id",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Products not",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/shop": {
             "put": {
                 "description": "Update the information of the logged-in user's shop",
                 "consumes": [
@@ -448,7 +492,7 @@
                 }
             }
         },
-        "/shops/my": {
+        "/shop/my": {
             "get": {
                 "description": "Get information of the logged-in user's shop",
                 "produces": [
@@ -480,7 +524,7 @@
                 }
             }
         },
-        "/shops/{shop_id}": {
+        "/shop/{shop_id}": {
             "get": {
                 "description": "Get information of a shop by shop ID",
                 "produces": [
@@ -782,7 +826,7 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/users/{id}/delete": {
             "delete": {
                 "description": "Delete a user by ID",
                 "tags": [
